test_suite/tests/ui/unexpected-literal/field.stderr
error: unexpected literal in serde field attribute
 --> $DIR/field.rs:6:13
  |
6 |     #[serde("literal")]
  |             ^^^^^^^^^

error: aborting due to previous error

